--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -82,3 +82,9 @@
   title={RocketLander},
   url={https://github.com/EmbersArc/gym},
 }
+
+@online{YoutubeMontezuma,
+author={OpenFaceChinesePoker},
+title={Why Montezuma Revenge doesnt work in DeepMind Arcade Learning Environment},
+url={https://www.youtube.com/watch?v=1rwPI3RG-lU},
+}
